Add properties files